# narrativeos-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
docs/: creator_quickstart.md  release_notes_v0.1.0.md  release_notes_v1.0.0.md  release_notes_v1.0.1.md
examples/: README.md  narrativeos-agent-sample.nosbook  sample_preview.html
examples/sample_source/: manifest.json  provenance.json  quality_report.json  rights_attestation.json
examples/sample_source/chapters/: 0001.json  0002.json  0003.json
scripts/: build-release-zip  narrativeos-agent  smoke-test
skills/narrativeos-agent/: SKILL.md
src/narrativeos_agent/: __init__.py  cli.py  longform.py  nosbook.py
tests/: test_agent_cli.py
