[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narrativeos-agent"
version = "0.1.0"
description = "Local-first NarrativeOS agent for generating, validating, previewing, and exporting .nosbook files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "NarrativeOS" }
]
dependencies = []

[project.scripts]
narrativeos-agent = "narrativeos_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
