[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narrativeos-agent"
version = "1.0.0"
description = "Local-first NarrativeOS agent for 500-chapter longform generation, validation, preview, and .nosbook export."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "NarrativeOS" }
]
dependencies = []

[project.scripts]
narrativeos-agent = "narrativeos_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
